safer checks in mongostat SERVER-2438